--- a/Estilo/Inicio_De_Sesion.css
+++ b/Estilo/Inicio_De_Sesion.css
@@ -82,14 +82,6 @@ li {
   cursor: pointer;
 }
 
-.signup-active a {
-  cursor: pointer;
-  color: #ffffff;
-  text-decoration: none;
-  border-bottom: solid 2px #1059FF;
-  padding-bottom: 10px;
-}
-
 .signup-inactive a {
   cursor: pointer;
   color: rgba(255,255,255,.3);
@@ -111,31 +103,6 @@ li {
 .form-signin-left {
   transform: translateX(-400px);
   opacity: .0;
-}
-
-.form-signup {
-  width: 430px;
-  height: 375px;
-	font-size: 16px;
-	font-weight: 300;
-  padding-left: 37px;
-  padding-right: 37px;
-  padding-top: 55px;
-  position: relative;
-  top: -375px;
-  left: 400px;
-  opacity: 0;
-  transition: all .5s ease;
-}
-
-.form-signup-left {
-  transform: translateX(-399px);
-  opacity: 1;
-}
-
-.form-signup-down {
-  top: 0px;
-  opacity: 0;
 }
 
 .success {
@@ -207,7 +174,7 @@ label {
 :focus {outline: none;
 }
 
-.form-signin input:focus, textarea:focus, .form-signup input:focus, textarea:focus {
+.form-signin input:focus, textarea:focus{
     background: rgba(255,255,255,.3);
     border: none; 
     padding-right: 40px;
@@ -299,22 +266,6 @@ label {
   margin-top: -1px;
 }
 
-.btn-signup {
-  float: left;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 13px;
-  text-align: center;
-  color: #ffffff;
-  padding-top: 8px;
-  width: 100%;
-  height: 35px;
-	border: none;
-	border-radius: 20px;
-  margin-top: 23px;
-  background-color: #1059FF;
-}
-
 .btn-signin {
   float: left;
   padding-top: 8px;
@@ -352,12 +303,6 @@ label {
   top: -420px;
   color: rgba(255,255,255,0);
   background-color: rgba(255,255,255,1);
-}
-
-a.btn-signup:hover, a.btn-signin:hover {
-    cursor: pointer; 
-    background-color: #0F4FE6;
-    transition: background-color .5s; 
 }
 
 .forgot {
